--- a/styles/scss/base/_responsive.scss
+++ b/styles/scss/base/_responsive.scss
@@ -140,12 +140,6 @@
     }
   
   
-    /** accordion **/
-      .accordion__item>.accordion-header:after {
-      top: -36px !important;
-      left: 9px;
-    }
-  
   /*** ordered lists ***/
   ol.km-ol {
     padding-left: 0;
